# pipeutil

./: -  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODEX.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
.claude/: ROLES.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  nightly.yml
docker/: Dockerfile.linux  entrypoint_build.sh  entrypoint_test.sh
docs/: design_change_spec_v1.1.0.md  feature_proposals_v0.2.md  feature_proposals_v2.0.md  feature_proposals_v2.0_additional.md  implementation_plan_v2.0.md
python/pipeutil/: __init__.py  __init__.pyi  _aio_native.py  aio.py  message_utils.py  mp.py  reconnecting_client.py  threading_utils.py
review/: 20260226210912.csv  20260226231902.csv  20260226233457.csv  20260227054155.csv  20260227054436.csv  20260227055220.csv  20260227062645.csv  20260228020052.csv  20260228020812.csv  20260228021228.csv  20260308123532.csv  20260308124449.csv  20260308124907.csv  20260310054507.csv  20260310062500.csv  20260310065000.csv  20260310080000.csv  20260310102000.csv  20260310110000.csv  20260310210505.csv  20260310211926.csv  20260310212326.csv  20260310215814.csv  20260310223423.csv  20260310223800.csv  20260311070042.csv  20260311070909.csv  20260311071747.csv  20260311072455.csv  20260311203607.csv  20260311204155.csv  20260311204555.csv  20260311210511.csv  20260311211019.csv  20260311211319.csv  20260311212803.csv  20260311213000.csv  20260311223339.csv  20260311223542.csv  20260311225025.csv  (+15 more)
source/: CMakeLists.txt
source/core/: CMakeLists.txt
source/core/include/pipeutil/: capability.hpp  io_buffer.hpp  message.hpp  multi_pipe_server.hpp  pipe_acl.hpp  pipe_client.hpp  pipe_error.hpp  pipe_server.hpp  pipe_stats.hpp  pipeutil.hpp  rpc_pipe_client.hpp  rpc_pipe_server.hpp
source/core/include/pipeutil/detail/: endian.hpp  frame_header.hpp  frame_io.hpp  platform_pipe.hpp  session_stats.hpp
source/core/src/: io_buffer.cpp  message.cpp  multi_pipe_server.cpp  pipe_client.cpp  pipe_error.cpp  pipe_server.cpp  pipe_stats.cpp  rpc_pipe_client.cpp  rpc_pipe_server.cpp
source/core/src/detail/: crc32c.cpp  crc32c.hpp  frame_io.hpp  platform_factory.hpp
source/core/src/platform/: posix_pipe.cpp  posix_pipe.hpp  win32_pipe.cpp  win32_pipe.hpp
source/python/: CMakeLists.txt  _pipeutil_module.cpp  py_async_module.cpp  py_async_pipe.cpp  py_async_pipe.hpp  py_capability.cpp  py_capability.hpp  py_compat.hpp  py_debug_log.hpp  py_exceptions.cpp  py_exceptions.hpp  py_message.cpp  py_message.hpp  py_multi_pipe_server.cpp  py_multi_pipe_server.hpp  py_pipe_client.cpp  py_pipe_client.hpp  py_pipe_server.cpp  py_pipe_server.hpp  py_pipe_stats.cpp  py_pipe_stats.hpp  py_rpc_pipe_client.cpp  py_rpc_pipe_client.hpp  py_rpc_pipe_server.cpp  py_rpc_pipe_server.hpp
spec/: 00_overview.md  01_cpp_core.md  02_protocol.md  03_platform.md  04_python_wrapper.md  05_build.md  A001_capability_negotiation.md  A002_flow_control.md  F001_multi_pipe_server.md  F002_rpc_message_id.md  F003_reconnecting_pipe_client.md  F004_async_threading_multiprocessing.md  F004p2_async_native.md  F005_structured_message.md  F006_diagnostics_metrics.md  F008_security_acl.md
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  test_capability_negotiation.cpp  test_error.cpp  test_error_mapping.cpp  test_io_buffer.cpp  test_message.cpp  test_multi_pipe_server.cpp  test_roundtrip.cpp  test_rpc.cpp  test_security_acl.cpp  test_stats.cpp  test_timeout.cpp
tests/python/: conftest.py  test_aio.py  test_aio_cancel.py  test_aio_native.py  test_aio_rpc.py  test_aio_serve.py  test_capability_negotiation.py  test_message.py  test_message_utils.py  test_mp_fork.py  test_mp_process_server.py  test_mp_spawn.py  test_multi_server.py  test_reconnecting.py  test_roundtrip.py  test_rpc.py  test_stats.py  test_threading_utils.py  test_timeout.py
tools/: build_test.ps1  linux_build_test.ps1  setup_venvs.ps1
