# pyproject.toml — pipeutil ビルド設定
# ビルドバックエンド: scikit-build-core (spec/05_build.md §6)

[build-system]
requires = ["scikit-build-core>=0.9", "cmake>=3.25"]
build-backend = "scikit_build_core.build"

# ─── プロジェクトメタデータ ───────────────────────────────────────────

[project]
name = "pipeutil"
version = "0.1.0"
description = "High-speed IPC pipe communication library (Windows/Linux)"
readme = "README.md"
requires-python = ">=3.8,<3.15"
license = { text = "MIT" }
authors = [
    { name = "pipeutil contributors" },
]
keywords = ["ipc", "pipe", "named-pipe", "unix-socket", "communication"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]

# ─── scikit-build-core 設定 ───────────────────────────────────────────

[tool.scikit-build]
# CMake ビルド設定
cmake.build-type = "Release"
cmake.args = ["-DPIPEUTIL_BUILD_PYTHON=ON"]

# Python パッケージディレクトリ
wheel.packages = ["python/pipeutil"]

# 最小 CMake バージョン
cmake.minimum-version = "3.25"

# ─── オプション依存 ──────────────────────────────────────────────────

[project.optional-dependencies]
test  = ["pytest>=8.0", "pytest-timeout>=2.3"]
async = ["pytest-asyncio>=0.23"]

# ─── 開発ツール設定 ───────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths  = ["tests/python"]
timeout    = 30          # テストごとの上限 (秒)
addopts    = "-v --tb=short"
asyncio_mode      = "strict"   # @pytest.mark.asyncio を明示使用（sync テストへの干渉を防ぐ）
asyncio_default_fixture_loop_scope = "function"  # deprecated behavior 解消

[tool.mypy]
python_version = "3.8"
strict = true

[tool.ruff]
target-version = "py38"
line-length = 100
