# pyproject.toml — pipeutil build configuration
# Build backend: scikit-build-core (spec/05_build.md §6)

[build-system]
requires = ["scikit-build-core>=0.9", "cmake>=3.25"]
build-backend = "scikit_build_core.build"

# ─── Project metadata ────────────────────────────────────────────────

[project]
name = "pipeutil"
version = "1.0.0"
description = "High-speed IPC pipe communication library (Windows/Linux)"
readme = "README.md"
requires-python = ">=3.8,<3.15"
license = { text = "MIT" }
authors = [
    { name = "pipeutil contributors" },
]
keywords = ["ipc", "pipe", "named-pipe", "unix-socket", "communication"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]

# ─── scikit-build-core settings ──────────────────────────────────────

[tool.scikit-build]
# CMake build settings
cmake.build-type = "Release"
cmake.args = ["-DPIPEUTIL_BUILD_PYTHON=ON"]

# Pure Python source directory
wheel.packages = ["python/pipeutil"]

# Merge extension module installed by CMake into wheel
# (includes _pipeutil.pyd / _pipeutil.so)
wheel.cmake = true

# Minimum CMake version
cmake.version = ">=3.25"

# ─── Optional dependencies ───────────────────────────────────────────

[project.optional-dependencies]
test    = ["pytest>=8.0", "pytest-timeout>=2.3"]
async   = ["pytest-asyncio>=0.23"]
msgpack = ["msgpack>=1.0"]              # opt-in msgpack support

# Full dev set (all optional extras)
dev     = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "pytest-asyncio>=0.23",
    "msgpack>=1.0",
]

# ─── Dev tool settings ───────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths  = ["tests/python"]
timeout    = 60          # per-test limit (seconds)
addopts    = "-v --tb=short"
asyncio_mode      = "strict"   # require explicit @pytest.mark.asyncio (prevents interference with sync tests)
asyncio_default_fixture_loop_scope = "function"  # resolves deprecated default behavior

[tool.mypy]
python_version = "3.8"
strict = true

[tool.ruff]
target-version = "py38"
line-length = 100
